<resources>
    <string name="app_name">studpay</string>
    <string name="welcome">Welcome..!</string>
    <string name="sign_in">Sign in</string>

    <string name="password">Password</string>
    <string name="new_user_signup">New user ?signUp</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_a_user_login">Already a user?Login</string>
    <string name="username">username</string>
</resources>