<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/signUpHeadingTextView"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/username"
        android:layout_width="384dp"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpHeadingTextView"
        app:layout_constraintVertical_bias="0.851" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="384dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />


    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="384dp"
        android:layout_height="60dp"
        android:autofillHints="none"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textPassword"
        app:layout_constraintVertical_bias="0.646" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/green"
        android:layout_marginBottom="152dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/loginFromRegister"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:text="@string/already_a_user_login"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />


</androidx.constraintlayout.widget.ConstraintLayout>